--- a/index.html
+++ b/index.html
@@ -293,9 +293,9 @@
                             </div>
                             <div class="col-lg-3">
                                 <div class="content-block bg-gradient shadow br-30 mb-24 mb-lg-0">
-                                    <h3 class="color-primary mb-48">2018</h3>
+                                    <h3 class="color-primary mb-48">2018-Present</h3>
                                     <div class="text-block mb-32">
-                                        <h5 class="mb-8">Present Independent Consultant at AlphaPress App Developers</h5>
+                                        <h5 class="mb-8">Independent Consultant at AlphaPress App Developers</h5>
                                     </div>
                                 </div>
                             </div>
