--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                 <div class="content-block bg-gradient shadow br-30 mb-24 mb-lg-0">
                                     <h3 class="color-primary mb-48">2014-2018</h3>
                                     <div class="text-block mb-32">
-                                        <h5 class="mb-8">Btech</h5>
+                                        <h5 class="mb-8">Bachelor in Technology</h5>
                                     </div>
                                 </div>
                             </div>
